@@ -2,7 +2,11 @@
 # $Id$
 # Public domain.
 
-./dvips -D 300 $srcdir/testdata/pfbincl.xdv -o pfbincl.ps || exit 1
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_dvips=$BinDir/dvips$ExeExt
+
+$_dvips -D 300 $srcdir/testdata/pfbincl.xdv -o pfbincl.ps || exit 1
 diff $srcdir/testdata/pfbincl.xps pfbincl.ps
 
 exit 0
