@@ -7,7 +7,11 @@
 # make -C $wp TESTS=test-missing-image.test check 
 # where wp=.../Work/texk/dvipsk
 
-if ./dvips $srcdir/testdata/missing-image.dvi -o missing-image.ps; then
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_dvips=$BinDir/dvips$ExeExt
+
+if $_dvips $srcdir/testdata/missing-image.dvi -o missing-image.ps; then
   echo "$0: found image file, but shouldn't have." >&2
   exit 1
 fi
