@@ -3,52 +3,60 @@
 # Public domain.
 # You may freely use, modify and/or distribute this file.
 
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_dvips=$BinDir/dvips$ExeExt
+
 TEXFONTS=".;$srcdir/testdata"
 SOURCE_DATE_EPOCH=1588474800
 export TEXFONTS SOURCE_DATE_EPOCH
 
 rm -f upjf.vf upjv.vf upjf-g.ofm upjv-g.ofm upjf-r.ofm upjv-r.ofm
 
+rc=0
+
 cp $srcdir/testdata/upjf_full.vf ./upjf.vf && \
 cp $srcdir/testdata/upjv_full.vf ./upjv.vf && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
-mv upjf.ps upjf_full.ps || exit 1
+$_dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
+mv upjf.ps upjf_full.ps || rc=1
 
 cp $srcdir/testdata/upjf_omit.vf ./upjf.vf && \
 cp $srcdir/testdata/upjv_omit.vf ./upjv.vf && \
 cp $srcdir/testdata/upjf-g00.ofm ./upjf-g.ofm && \
 cp $srcdir/testdata/upjv-g00.ofm ./upjv-g.ofm && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
-mv upjf.ps upjf_omit.ps || exit 2
+$_dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
+mv upjf.ps upjf_omit.ps || rc=2
 
-diff upjf_full.ps upjf_omit.ps || exit 3
+diff upjf_full.ps upjf_omit.ps || rc=3
 
 cp $srcdir/testdata/upjf-r00.ofm ./upjf-r.ofm && \
 cp $srcdir/testdata/upjv-r00.ofm ./upjv-r.ofm && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
-mv upjf.ps upjf_omit2.ps || exit 4
+$_dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
+mv upjf.ps upjf_omit2.ps || rc=4
 
-diff upjf_full.ps upjf_omit2.ps || exit 5
+diff upjf_full.ps upjf_omit2.ps || rc=5
 
 
 rm -f upjf-r.ofm upjv-r.ofm
 
 cp $srcdir/testdata/upjf1_full.vf ./upjf.vf && \
 cp $srcdir/testdata/upjv_full.vf ./upjv.vf && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf1.ps -u $srcdir/testdata/upjf.map && \
-mv upjf1.ps upjf1_full.ps || exit 6
+$_dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf1.ps -u $srcdir/testdata/upjf.map && \
+mv upjf1.ps upjf1_full.ps || rc=6
 
 cp $srcdir/testdata/upjf1_omit.vf ./upjf.vf && \
 cp $srcdir/testdata/upjv_omit.vf ./upjv.vf && \
 cp $srcdir/testdata/upjf1-r.tfm ./upjf-r.tfm && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf1.ps -u $srcdir/testdata/upjf.map && \
-mv upjf1.ps upjf1_omit.ps || exit 7
+$_dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf1.ps -u $srcdir/testdata/upjf.map && \
+mv upjf1.ps upjf1_omit.ps || rc=7
 
-diff upjf1_full.ps upjf1_omit.ps || exit 8
+diff upjf1_full.ps upjf1_omit.ps || rc=8
 
 cp $srcdir/testdata/upjf-r00.ofm ./upjf-r.ofm && \
 cp $srcdir/testdata/upjv-r00.ofm ./upjv-r.ofm && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf1.ps -u $srcdir/testdata/upjf.map && \
-mv upjf1.ps upjf1_omit2.ps || exit 9
+$_dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf1.ps -u $srcdir/testdata/upjf.map && \
+mv upjf1.ps upjf1_omit2.ps || rc=9
 
-diff upjf1_full.ps upjf1_omit2.ps || exit 10
+diff upjf1_full.ps upjf1_omit2.ps || rc=10
+
+exit $rc
