@@ -1,3 +1,9 @@
+2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* beginfontk1.test, eepic-nan.test, pfbincl.test, same-name.test,
+	test-{afm2tfm,dvips,missing-image,overflow-buffers}.test,
+	uptex-vf.test: Make easier to test on Windows.
+
 2023-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* {virtualfont,pprescan,scanpage,dopage,tfmload}.c, dvips.h:
